--- a/KANBAN/src/Style/_cadastro.scss
+++ b/KANBAN/src/Style/_cadastro.scss
@@ -1,17 +1,18 @@
 @use './variaveis' as *;
- 
+
 .formularios{
-    max-width: 600px;
+    min-width: 500px;
+    min-height:500px ;
     margin: 20px;
     padding: 10px;
-    background-color: $backgrond;
+    backdrop-filter: blur(16px);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     gap:10px;
     justify-content: center ;
-   
- 
+    
+    
     h2{
         text-align: center;
         margin-bottom: 2px;
@@ -19,32 +20,125 @@
         font-family: Arial, Helvetica, sans-serif;
         color:$primary;
     }
-   
- 
+     p{
+        color: white;
+        display: flex;
+        justify-content: center;
+     }
+
         label{
             font-weight: bold;
             margin-bottom: 10px;
             color: $primary
         }
-        input{
+        input, textarea{
             padding: 10px;
-            border: 1px solid $primary;
+            border: none;
             border-radius: 8px;
             font-size: 16px;
         }
-        button{
+        .sign_button{
             padding: 10px;
             background-color: $accent;
             color: $backgrond;
             font-size: 16px;
-            border: none;
+            border: none; 
             border-radius: 10px;
             cursor: pointer;
+            margin-bottom: 20px;
         }
         .errors{
             font-size: 12px;
-            color:red;            
+            color:red;             
         }
- 
+
+    .image_logo{
+    width: 20px;
+    height: 20px;
+    }
+    .google_button{
+        display: flex;
+          align-items: center;
+        justify-content: center;
+        gap: 10px;
+        padding: 10px;
+        font-size: 16px;
+        border-radius: 10px;
+        border: none;
+        cursor: pointer;
+         color: white;
+         background-color: transparent;
+    }
 }
- 
+.conteiner_form{
+    display: flex;
+    width: 100vw;
+    background-image: url("./image/background.jpg");
+    background-size: cover;
+    height: 100vh;
+    align-items: center;
+}
+
+.box-left{
+    display: flex;
+    width: 50vw;
+    justify-content: center;
+
+}
+
+
+
+
+.box-right{
+    display: flex;
+    width: 50vw;
+    justify-content: center;
+}
+
+.text_cadastro{
+    color: $backgrond;
+    text-align: initial;
+    margin: 0 20px;
+
+    .logotype{
+        width: 150px;
+        margin-bottom: 10px;
+    }
+    h2{
+        font-size: 50px;
+        margin-bottom: 0;
+        font-family: "Roboto", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 900;
+        font-style: normal;
+        font-variation-settings:
+        "wdth" 100;
+        font-size: 60px;
+    }
+    h3{
+        font-size: 20px;
+        margin-top: 5px;
+        max-width: 490px;
+        font-family: "Roboto", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 300;
+        font-style: normal;
+        font-variation-settings:
+        "wdth" 100;
+        font-size: 30px;
+    }
+    p{
+        font-size: 16px;
+        margin-top: 10px;        
+        max-width: 500px;
+        font-family: "Roboto", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 100;
+        font-style: normal;
+        font-variation-settings:
+        "wdth" 100;
+        font-size: 20px;
+    }
+}
+
+
