--- a/KANBAN/src/Style/_coluna.scss
+++ b/KANBAN/src/Style/_coluna.scss
@@ -1,16 +1,18 @@
-@use "./_variaveis" as * ;
+@use './variaveis' as *;
 
-.conteiner{
-    max-width: 1440px;
-    margin:10px;
-    padding:10px;
-    display:flex;
+.coluna{
+    background-color: $backgrond;
+    border: 2px solid $secondary;
+    border:6px;
+    padding: 1rem;
+    display: flex;
     flex-direction: column;
-    gap: 2px;
-    background-color:$secondary;
+    gap:2px;
 
-    h1{
-        font-size: 26px;
-        color: $backgrond;
+    .titulo{
+        font-size: 18px;
+        color:$primary; 
+        text-align: center;
+        font-family: $font-primary;
     }
 }
