--- a/KANBAN/src/Style/_quadro.scss
+++ b/KANBAN/src/Style/_quadro.scss
@@ -1,17 +1,16 @@
-
-@use "./_variaveis" as * ;
+@use './variaveis.scss' as *;
 
 .conteiner{
     max-width: 1440px;
     margin:10px;
     padding:10px;
-    display:flex;
+    display: flex;
     flex-direction: column;
-    gap: 2px;
+    gap:2px;
     background-color:$secondary;
 
     h1{
         font-size: 26px;
-        color: $backgrond;
+        color:$backgrond;
     }
 }
