--- a/KANBAN/src/Style/_variaveis.scss
+++ b/KANBAN/src/Style/_variaveis.scss
@@ -1,8 +1,8 @@
 $backgrond: #f4f7f9;
-$primary: #1a2b3c;
-$secondary: #7c8c9a;
-$accent: #00647a;
-$button: orange;
+$primary:#1a2b3c; 
+$secondary: #7c8c9a; 
+$accent:#00647a; 
+$button:orange;
 
 $text-primary:$backgrond;
 $text-background:$primary;
@@ -10,10 +10,12 @@ $font-primary:"Verdana";
 $font-size:16px;
 
 *{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;    
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
 body{
     background-color: $primary;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
