--- a/KANBAN/src/Style/main.scss
+++ b/KANBAN/src/Style/main.scss
@@ -1,6 +1,6 @@
-@use './header';
-@use './variaveis';
-@use './quadro';
-@use './coluna';
-@use './cabecalho';
-@use './cardusuario';
+@use './_quadro.scss'; 
+@use './_variaveis.scss';
+@use './_coluna';
+@use './_barraNavegacao';
+@use './_cabecalho';
+@use './_cadastro';
