--- a/KANBAN/src/Style/_variaveis.scss
+++ b/KANBAN/src/Style/_variaveis.scss
@@ -9,6 +9,17 @@ $text-background:$primary;
 $font-primary:"Verdana";
 $font-size:16px;
 
+@mixin roboto-100{
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+}
+
+
+
+
+
+
 *{
     margin: 0;
     padding: 0;
